--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ after_success:
 deploy:
     provider: elasticbeanstalk
     region: ap-south-1
-    app: "multidocker-checkpoint"
-    env: "MultidockerCheckpoint-env"
+    app: "checkpoint-multidocker"
+    env: "CheckpointMultidocker-env"
     bucket_name: "elasticbeanstalk-ap-south-1-562731450625"
     bucket_path: "docker-checkpoint"
     on:
