--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,24 @@
-upstream client{
-    server client:3000;
+upstream client {
+  server client:3000;
 }
 
-upstream api{
-    server api:5000;
+upstream api {
+  server api:5000;
 }
 
-server{
-    listen 80;
-    location /{
-        proxy_pass http://client;
-    }
-
-   #only required for devlopment not for production 
-    location /sockjs-node{
-        proxy_pass:http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade"; 
-    }
-
-    location /api{
-        rewrite /api/(.*) /$1 break; #removes api from url
-        proxy_pass http://api;
-    }
+server {
+  listen 80;
+  location / {
+    proxy_pass http://client;
+  }
+  location /sockjs-node {
+    proxy_pass http://client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+  }
+  location /api {
+    rewrite /api/(.*) /$1 break;
+    proxy_pass http://api;
+  }
 }
